--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - uses: taiki-e/create-gh-release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -22,30 +22,17 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          # - target: aarch64-unknown-linux-gnu
-          #   os: ubuntu-latest
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
-          # - target: x86_64-pc-windows-msvc
-          #   os: windows-latest
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-
-      # Install dependencies on Linux
-      - name: Install dependencies on Linux
-        if: startsWith(matrix.target, 'x86_64-unknown-linux') || startsWith(matrix.target, 'aarch64-unknown-linux')
-        run: sudo apt-get update && sudo apt-get install -y make openssl libssl-dev
-
+      - uses: actions/checkout@v6
+      
       # Upload Rust binaries
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           bin: asm-lsp
           target: ${{ matrix.target }}
-          tar: unix
-          # zip: windows
+          # ✅ Use zip for Windows
+          zip: windows
           token: ${{ secrets.GITHUB_TOKEN }}
